# flatbuffers-experiments

./: CMakeLists.txt  README.md  main.cpp  schema.fbs  schema_generated.h
